--- a/project_beetrootac/mysite/notes/templates/notes/index.html
+++ b/project_beetrootac/mysite/notes/templates/notes/index.html
@@ -7,12 +7,18 @@
     <h1>Мої нотатки</h1>
 
     {% for note in notes %}
-        <h2>{{ note.title }}</h2>
-        <p>{{ note.text }}</p>
-        <p>Категорія: {{ note.category.title }}</p>
+        <div>
+            <h2>{{ note.title }}</h2>
+            <p>{{ note.text }}</p>
+            <p><strong>Категорія:</strong> {{ note.category.title }}</p>
+
+            {% if note.reminder %}
+                <p><em>Нагадування: {{ note.reminder }}</em></p>
+            {% endif %}
+        </div>
         <hr>
     {% empty %}
-        <p>Нотаток ще немає</p>
+        <p>Нотаток поки немає</p>
     {% endfor %}
 </body>
 </html>
